--- a/config.gradle
+++ b/config.gradle
@@ -7,24 +7,18 @@ def windowsReleaseCompilerArgs = ['/O2']
 def windowsLinkerArgs = ['/DEBUG:FULL']
 def windowsReleaseLinkerArgs = ['/OPT:REF', '/OPT:ICF']
 
-def linuxCompilerArgs = ['-std=c++14', '-Wformat=2', '-Wall', '-Wextra', '-Werror', '-pedantic', '-Wno-psabi', '-g',
-                         '-D_LARGEFILE_SOURCE', '-D_FILE_OFFSET_BITS=64', '-D_GNU_SOURCE',
-                         '-Wno-unused-parameter', '-Wno-error=deprecated-declarations', '-fPIC', '-rdynamic',
-                         '-pthread']
-def linuxCCompilerArgs = ['-g',
-                          '-D_LARGEFILE_SOURCE', '-D_FILE_OFFSET_BITS=64', '-D_GNU_SOURCE',
-                          '-fPIC', '-rdynamic', '-pthread']
+def linuxCompilerArgs = ['-std=c++14', '-Wformat=2', '-Wall', '-Wextra', '-Werror', '-pedantic', '-Wno-psabi', '-Wno-error=deprecated-declarations', '-fPIC', '-rdynamic', '-pthread']
+def linuxCCompilerArgs = ['-Wformat=2', '-Wall', '-Wextra', '-Werror', '-pedantic', '-Wno-psabi', '-Wno-unused-parameter', '-fPIC', '-rdynamic', '-pthread']
 def linuxLinkerArgs = ['-rdynamic', '-pthread', '-ldl']
 def linuxReleaseCompilerArgs = ['-Og']
-def linuxDebugCompilerArgs = ['-O0']
+def linuxDebugCompilerArgs = ['-O0', '-g']
 def linux32BitArg = '-m32'
 
 def macCompilerArgs = ['-std=c++14', '-Wall', '-Wextra', '-Werror', '-pedantic-errors', '-fPIC', '-g',
-                       '-D_DARWIN_USE_64_BIT_INODE=1', '-D_DARWIN_UNLIMITED_SELECT=1',
                        '-Wno-unused-parameter', '-Wno-error=deprecated-declarations', '-Wno-missing-field-initializers',
                        '-Wno-unused-private-field', '-Wno-unused-const-variable', '-pthread']
-def macCCompilerArgs = ['-fPIC', '-g',
-                        '-D_DARWIN_USE_64_BIT_INODE=1', '-D_DARWIN_UNLIMITED_SELECT=1']
+def macCCompilerArgs = ['-Wall', '-Wextra', '-Werror', '-pedantic-errors', '-fPIC', '-g',
+                        '-Wno-unused-parameter', '-Wno-missing-field-initializers', '-Wno-unused-private-field']
 def macObjCLinkerArgs = ['-std=c++14', '-stdlib=libc++','-fobjc-arc', '-g', '-fPIC', '-Wall', '-Wextra', '-Werror']
 def macReleaseCompilerArgs = ['-O2']
 def macDebugCompilerArgs = ['-O0']
@@ -120,6 +114,25 @@ if (!project.hasProperty('skipAthena')) {
     }
 }
 
+if (!project.hasProperty('skipRaspberry')) {
+    model {
+        buildConfigs {
+            raspberry(CrossBuildConfig) {
+                architecture = 'raspberry'
+                operatingSystem = 'linux'
+                toolChainPrefix = 'arm-linux-gnueabihf-'
+                compilerArgs = linuxCompilerArgs
+                CCompilerArgs = linuxCCompilerArgs
+                linkerArgs = linuxLinkerArgs
+                debugCompilerArgs = linuxDebugCompilerArgs
+                releaseCompilerArgs = linuxReleaseCompilerArgs
+                releaseStripBinaries = true
+                compilerFamily = 'Gcc'
+            }
+        }
+    }
+}
+
 if (!project.hasProperty('onlyAthena')) {
     model {
         buildConfigs {
@@ -166,7 +179,6 @@ if (!project.hasProperty('onlyAthena')) {
                 releaseCompilerArgs = macReleaseCompilerArgs
                 objCppCompilerArgs = macObjCLinkerArgs
                 linkerArgs = macLinkerArgs
-                releaseStripBinaries = true
                 compilerFamily = 'Clang'
                 detectPlatform = mac64PlatformDetect
             }
@@ -295,6 +307,12 @@ ext.includeStandardZipFormat = { task, value ->
             if (binary instanceof SharedLibraryBinarySpec) {
                 task.dependsOn binary.buildTask
                 task.from(new File(binary.sharedLibraryFile.absolutePath + ".debug")) {
+                    into getPlatformPath(binary) + '/shared'
+                }
+                def sharedPath = binary.sharedLibraryFile.absolutePath
+                sharedPath = sharedPath.substring(0, sharedPath.length() - 4)
+
+                task.from(new File(sharedPath + '.pdb')) {
                     into getPlatformPath(binary) + '/shared'
                 }
                 task.from(binary.sharedLibraryFile) {
