--- a/publish.gradle
+++ b/publish.gradle
@@ -4,19 +4,13 @@ apply plugin: 'maven-publish'
 // already specified on the command line
 if (!hasProperty('releaseType')) {
     WPILibVersion {
-        releaseType = 'OFFICIAL'
+        releaseType = 'dev'
     }
 }
 
 ext.licenseFile = files("$rootDir/LICENSE.txt")
 
-def pubVersion = '1.8.0'
-//if(ext.hasProperty("gtestVersion")){
-//    pubVersion = ext.gtestVersion
-//}
-//else{
-//    pubVersion = WPILibVersion.version
-//}
+def pubVersion = '1.0.0'
 
 def outputsFolder = file("$buildDir/allOutputs")
 
@@ -66,10 +60,10 @@ task cppHeadersZip(type: Zip) {
     from(licenseFile) {
         into '/'
     }
-
-    from('googletest/googletest/include') {
+    from('src/include') {
         into '/'
     }
+
 }
 
 build.dependsOn cppHeadersZip
@@ -91,8 +85,9 @@ model {
                 if (!project.hasProperty('jenkinsBuild')) {
                     artifact allTask
                 }
+                
                 artifact cppHeadersZip
-
+                
                 artifactId = baseArtifactId
                 groupId artifactGroupId
                 version pubVersion
